<resources>

    <string name="app_name">NightMode_Filter</string>
    <string name="bo_loc_man_hinh">Screen filter</string>

    <string name="cai_dat">Setting</string>
    <string name="danh_gia">Rate</string>
    <string name="chia_se">Share</string>
    <string name="thong_tin">Info</string>

    <string name="name">Bluelight filter</string>

    <string name="bo_loc">Filter</string>
    <string name="lich_trinh">Schedule</string>
    <string name="phim_tat">Shortcut</string>
    <string name="on">Open</string>
    <string name="off">Close</string>

    <string name="cuong_do_bo_loc">Filter intensity:</string>
    <string name="che_do_ban_dem">Night mode</string>
    <string name="bo_loc_mau_sac">Color filter</string>
    <string name="bat_dau">Start</string>
    <string name="ket_thuc">End</string>
    <string name="todo">TODO</string>
    <string name="huy">Cancel</string>
    <string name="dong_y">Agree</string>

    <string name="enable_filter">Activate the filter</string>
    <string name="vo_hieu_bo_loc">Disable filter</string>
    <string name="kich_hoat_vo_hieu">Acticate/Disable filter</string>
    <string name="nam">5%</string>
    <string name="muoi">10%</string>
    <string name="muoi_lam">15%</string>
    <string name="hai_muoi">20%</string>
    <string name="hai_nam">25%</string>
    <string name="ba_muoi">30%</string>
    <string name="ba_nam">35%</string>
    <string name="bon_muoi">40%</string>
    <string name="bon_nam">45%</string>
    <string name="nam_muoi">50%</string>
    <string name="nam_nam">55%</string>
    <string name="sau_muoi">60%</string>
    <string name="sau_nam">65%</string>
    <string name="bay_muoi">70%</string>
    <string name="bay_nam">75%</string>
    <string name="tam_muoi">80%</string>
    <string name="tam_nam">85%</string>
    <string name="chin_muoi">90%</string>
    <string name="chin_nam">95%</string>
    <string name="choose">Choose one</string>

    <string name="tac_gia">Author</string>
    <string name="hdp_solutions">Your Company</string>
    <string name="chinh_sach_bao_mat">Privacy Policy</string>
    <string name="link_chinh_sach_bao_mat">https://nightmode-filter.flycricket.io/privacy.html</string>
    <string name="link_home">http://yourdomain.com/</string>
    <string name="email">Email</string>
    <string name="EmailFeedback">fahim.hasan.uits@gmail.com</string>
    <string name="ok">OK</string>

    <string name="feedback_app">Feedback app Blue light filter</string>
    <string name="send_feesback">Send Feedback</string>

    <string name="thong_bao_noti">Notification</string>
    <string name="che_do">Regime</string>
    <string name="anh_chup">Screenshot without filter</string>
    <string name="do_mo_man_hinh">Screen opacity:</string>
    <string name="cai_dat_hen_gio">Install automatic timer</string>
    <string name="tam_ngung">Pause for 60 seconds</string>

    <string name="hiren_thi_thong_bao">show notification</string>
    <string name="luon_luon">Always</string>
    <string name="chon_noi_dung_noti">Select message content:</string>
    <string name="bo_loc_man_hinh_giam_mo">Screen filter reduces blurry eyes</string>
    <string name="bo_loc_man_hinh_giam_moi">Screen filter reduces eye strain</string>
    <string name="nhan_vo_hieu_hoa">Click here to disable the filter</string>
    <string name="tab_here">Tap here to disable filter</string>

    <string name="khi_bat_bo_loc">When turn on the filter</string>
    <string name="tat">Off</string>
    <string name="chon_che_do">Select the mode</string>
    <string name="sang">shining</string>
    <string name="toi">Dark</string>

    <string name="dieu_khoan_dich_vu">Terms of service</string>
    <string name="thoat">Exit</string>
    <string name="mo">Open</string>

    <string name="xoa_thanh_cong">Delete success</string>
    <string name="xoa_that_bai">Delete failure</string>
    <string name="khong">0</string>
    <string name="phan_tram">%</string>
    <string name="toast_mausac">Applied light color filter </string>

    <string name="anh_sang_mat_trang">moon</string>
    <string name="anh_sang_den_nen">candles</string>
    <string name="anh_sang_binh_minh">Dawn</string>
    <string name="anh_sang_den_soi_dot">incandescent</string>
    <string name="anh_sang_den_huynh_quang">fluorescent</string>
    <string name="anh_sang_trong_rung">in the forest</string>
    <string name="anh_sang_mat_troi">sunlight</string>
    <string name="toas_on">activated filter</string>
    <string name="toas_off">has disabled the filter</string>
    <string name="thanh_cong">success</string>
    <string name="that_bai">fail</string>

    <string name="thoi_gian_bat_dau">Time to start:</string>
    <string name="thoi_gian_ket_thuc">Time to end:</string>

    <string name="toas_chua_chon_time">You have not selected start time or end time</string>
    <string name="chon_khoang_tg">"You need to select a time range from</string>
    <string name="den">from</string>
    <string name="doublebacktoexit">Press again to exit</string>
</resources>
