<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/hiren_thi_thong_bao"
        android:textColor="@color/color_black"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/_10sdp"
            android:text="@string/luon_luon"
            android:textStyle="bold" />
        <CheckBox
            android:id="@+id/ckAlways"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_20sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/_10sdp"
            android:text="@string/khi_bat_bo_loc"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/ckTurnOnFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_20sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/_10sdp"
            android:text="@string/tat"
            android:textStyle="bold" />
        <CheckBox
            android:id="@+id/ckOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_20sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtHuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="@dimen/_10sdp"
            android:text="@string/huy"
            android:textColor="@color/color_appbar"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/dong_y"
            android:textColor="@color/color_appbar"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>