<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/ln1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_20sdp"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray">

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="left|center"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/ic_app_notification" />

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_2sdp"
                android:src="@drawable/ic_settings_notification" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_20sdp"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">
                <TextView
                    android:visibility="gone"
                    android:id="@+id/txtNotifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/nam_muoi"
                    android:textSize="@dimen/_18sdp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/bo_loc_man_hinh_giam_mo"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/nhan_vo_hieu_hoa"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>