<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/gray"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_appbar">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/txtOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="@string/ok"
                android:textColor="@color/color_while"
                android:textSize="@dimen/_15sdp" />
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/bg_filter"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/bat_dau"
                    android:textColor="@color/color_blue"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="@string/ket_thuc"
                    android:textColor="@color/color_red"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtStart"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_50sdp"
                    android:background="@drawable/bg_clock"
                    android:drawableStart="@drawable/ic_set_time"
                    android:gravity="center"
                    android:text="8:00"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtEnd"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/bg_clock"
                    android:drawableStart="@drawable/ic_set_time"
                    android:gravity="center"
                    android:text="8:00"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thoi_gian_bat_dau"
                android:textColor="@color/color_black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/txtThoiGianBatDau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textColor="@color/color_blue"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thoi_gian_ket_thuc"
                android:textColor="@color/color_black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/txtThoiGianKetThuc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textColor="@color/color_red"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/ads_footer" />

</LinearLayout>